<resources>
    <string name="app_name">JobSeeker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="base_url">http://192.168.43.183:8000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_username">Please Enter Username</string>
    <string name="invalid_password">Capital and small letter symbol number</string>
    <string name="invalid_email">Please Enter email address</string>
    <string name="conform_password">Password is not match</string>
    <string name="logo">image_logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="ViewCv">View Cv</string>
    <string name="youDoNotHaveAccount">"you don't have account? "</string>
    <string name="register">register</string>
    <string name="title_activity_new_job">NewJobActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="good_morning">Good morning</string>
    <string name="name">Name</string>
    <string name="find_job">Find Your</string>
    <string name="drawerOpen">open</string>
    <string name="drawerClose">close</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="content_description_media">description</string>
    <string name="label">Comapany_name</string>
    <string name="hint_text">Day</string>
    <string name="content_description_end_icon">calendar</string>
    <string name="term">Term</string>
    <string name="location">location</string>
    <string name="new_jobs">New Jobs</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="date_of_birth">date of birth</string>
    <string name="company_name">company name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="conform_password_r">Conform password</string>
    <string name="sign_up">Sign up</string>
    <string name="you_have_account">you have account?</string>
    <string name="employer">employer</string>
    <string name="seeker">seeker</string>
    <string name="no_data">No data</string>
    <string name="search_job">Search job....</string>
    <string name="post_job">post job</string>
    <string name="post_cv">post CV</string>
    <string name="setting">setting</string>
    <string name="change_language">change language</string>
    <string name="log_out">Log out</string>
    <string name="post">Post</string>
    <string name="choose_image">Choose image</string>
    <string name="title">title</string>
    <string name="requirement">requirement</string>
    <string name="last_date">Last date</string>
    <string name="change_image">Change Image</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="edit_account_info">edit account info</string>
    <string name="basic_info">Basic info</string>
    <string name="contact_info">Contact info</string>
    <string name="place_info">Place info</string>
    <string name="choose_cv">Choose CV</string>
    <string name="change_cv">Change CV</string>
    <string name="about_job">About Job</string>
    <string name="company">Company</string>
    <string name="channel_name">JOB</string>
    <string name="channel_description">JOBSeeker</string>
    <string name="language">ខ្មែរ</string>
    <string-array name="typeOfJob">
        <item>All</item>
        <item>Full time</item>
        <item>Part time</item>
        <item>Internship</item>
    </string-array>

    <string-array name="typeOfJobPost">
        <item>Full time</item>
        <item>Part time</item>
        <item>Internship</item>
    </string-array>
    <string-array name="typeOfJobPost1">
        <item>Part time</item>
        <item>Full time</item>
        <item>Internship</item>
    </string-array>
    <string-array name="typeOfJobPost2">
        <item>Internship</item>
        <item>Full time</item>
        <item>Part time</item>
    </string-array>
</resources>
