<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ccc"
    android:layout_height="match_parent"
    tools:context=".viewCV.PostCvActivity">
    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/lagout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@drawable/border"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:id="@+id/title_app"
            android:textColor="#0000ff"
            android:textStyle="bold"
            android:textSize="22dp"
            android:text="@string/post_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_post_cv"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:textColor="#fff"
        android:text="@string/post"
        android:background="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView

        android:src="@drawable/ic_launcher_background"
        android:id="@+id/post_job_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/lagout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/post_job_button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_job_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/choose_cv"
        android:textSize="10sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/post_job_button_choose_image"
        android:layout_marginTop="0dp"
        android:padding="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/post_job_ed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_title"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/title"
                        android:padding="5dp" />
                </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/post_job_ed_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edExperience"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/requirement"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/post_job_ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/post_job_ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNumberPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>